--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.1",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "validator": "^13.15.15"
   },
   "name": "backend",
   "version": "1.0.0",
